force-app/main/default/objects/Opportunity/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Originating Opportunities</relationshipLabel>
    <relationshipName>Originating_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>