force-app/main/default/objects/Opportunity/fields/Budget_Range__c.field-meta.xml
<CustomField>
    <fullName>Budget_Range__c</fullName>
    <label>Budget Range</label>
    <length>80</length>
    <type>Text</type>
</CustomField>