force-app/main/default/objects/Opportunity/fields/Close_Reason_Lost__c.field-meta.xml
<CustomField>
    <fullName>Close_Reason_Lost__c</fullName>
    <label>Close Reason (Lost)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Price</fullName><default>false</default><label>Price</label></value>
            <value><fullName>Location</fullName><default>false</default><label>Location</label></value>
            <value><fullName>Inventory</fullName><default>false</default><label>Inventory</label></value>
            <value><fullName>Competitor</fullName><default>false</default><label>Competitor</label></value>
            <value><fullName>Not Ready</fullName><default>false</default><label>Not Ready</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>