force-app/main/default/objects/Opportunity/fields/Concession_Approved_Pct__c.field-meta.xml
<CustomField>
    <fullName>Concession_Approved_Pct__c</fullName>
    <label>Concession Approved %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>