force-app/main/default/objects/Opportunity/fields/Concession_Requested_Pct__c.field-meta.xml
<CustomField>
    <fullName>Concession_Requested_Pct__c</fullName>
    <label>Concession Requested %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>