force-app/main/default/objects/Opportunity/fields/Primary_Unit__c.field-meta.xml
<CustomField>
    <fullName>Primary_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Unit of Interest</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Interested Opportunities</relationshipLabel>
    <relationshipName>Interested_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>