force-app/main/default/objects/Opportunity/fields/Quoted_Gross_Value__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Gross_Value__c</fullName>
    <label>Quoted Gross Value</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>