force-app/main/default/objects/Opportunity/fields/Token_Amount__c.field-meta.xml
<CustomField>
    <fullName>Token_Amount__c</fullName>
    <label>Token Amount</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>