force-app/main/default/objects/Opportunity/recordTypes/Pre_sales_Commercial.recordType-meta.xml
<RecordType>
    <fullName>Pre_sales_Commercial</fullName>
    <active>true</active>
    <businessProcess>Pre_Sales_Process</businessProcess>
    <label>Pre-sales Commercial</label>
</RecordType>