force-app/main/default/objects/Opportunity/recordTypes/Pre_sales_Residential.recordType-meta.xml
<RecordType>
    <fullName>Pre_sales_Residential</fullName>
    <active>true</active>
    <businessProcess>Pre_Sales_Process</businessProcess>
    <label>Pre-sales Residential</label>
</RecordType>