force-app/main/default/objects/Opportunity/validationRules/Closed_Lost_Requires_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Lost_Requires_Reason</fullName>
    <active>true</active>
    <description>A Close Reason must be selected when the opportunity is marked Closed Lost, for pipeline analytics.</description>
    <errorConditionFormula>AND(
    ISCHANGED(StageName),
    ISPICKVAL(StageName, 'Closed Lost'),
    ISBLANK(TEXT(Close_Reason_Lost__c))
)</errorConditionFormula>
    <errorMessage>Close Reason is required when marking an opportunity as lost.</errorMessage>
</ValidationRule>