force-app/main/default/objects/Opportunity/validationRules/Closed_Won_Requires_Financials.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Won_Requires_Financials</fullName>
    <active>true</active>
    <description>Closing won requires EOI Amount, Token Amount, and Primary Unit to all be populated. Prevents premature close-won without financial commitment.</description>
    <errorConditionFormula>AND(
    ISCHANGED(StageName),
    ISPICKVAL(StageName, 'Closed Won (Booked)'),
    OR(
        ISBLANK(EOI_Amount__c),
        ISBLANK(Token_Amount__c),
        ISBLANK(Primary_Unit__c)
    )
)</errorConditionFormula>
    <errorMessage>EOI Amount, Token Amount, and Primary Unit are all required to close won.</errorMessage>
</ValidationRule>