force-app/main/default/objects/Opportunity/validationRules/Require_Unit_By_Negotiation.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Unit_By_Negotiation</fullName>
    <active>true</active>
    <description>Primary Unit of Interest must be populated once the opportunity enters Negotiation or any downstream stage.</description>
    <errorConditionFormula>AND(
    ISCHANGED(StageName),
    OR(
        ISPICKVAL(StageName, 'Negotiation'),
        ISPICKVAL(StageName, 'EOI'),
        ISPICKVAL(StageName, 'Token Paid'),
        ISPICKVAL(StageName, 'Closed Won (Booked)')
    ),
    ISBLANK(Primary_Unit__c)
)</errorConditionFormula>
    <errorMessage>Primary Unit of Interest is required before entering Negotiation.</errorMessage>
</ValidationRule>